--- a/assets/base.css
+++ b/assets/base.css
@@ -648,10 +648,6 @@ h6:empty {
   color: rgb(var(--color-foreground));
 }
 
-.link--text:hover {
-  color: rgba(var(--color-foreground), 0.75);
-}
-
 .link-with-icon {
   display: inline-flex;
   font-size: 1.4rem;
@@ -773,10 +769,10 @@ summary {
 }
 
 summary .icon-caret {
-  position: absolute;
-  height: 0.6rem;
-  right: 1.5rem;
-  top: calc(50% - 0.2rem);
+  width: 10px;
+  height: 10px;
+  margin-left: 5px;
+  transition: 0.3s;
 }
 
 summary::-webkit-details-marker {
@@ -2331,11 +2327,15 @@ product-info .loading-overlay:not(.hidden) ~ *,
 .header {
   display: grid;
   grid-template-areas: 'left-icon heading icons';
-  grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
+  grid-template-columns: 1fr 2fr 1fr;
 }
 
 @media screen and (min-width: 990px) {
+  .header {
+    grid-template-columns: 30rem 2fr 30rem;
+  }
+
   .header--top-left,
   .header--middle-left:not(.header--has-menu) {
     grid-template-areas:
@@ -2717,9 +2717,10 @@ details[open] > .header__submenu {
 .header__menu-item {
   padding: 8px 14px;
   text-decoration: none;
-  color: rgba(var(--color-foreground), 0.75);
-  font-size: 0.85em;
+  color: rgba(var(--color-foreground));
+  font-size: 12px;
   font-weight: 500;
+  text-transform: uppercase;
 }
 
 .header__menu-item:hover {
@@ -3064,4 +3065,18 @@ details-disclosure > details {
 
 .scrolled-past-header .header__inline-menu {
   grid-area: heading;
+}
+
+.scrolled-past-header  .header:not(.header--middle-left, .header--middle-center) .header__inline-menu {
+  margin-top: 0;
+}
+
+.scrolled-past-header .header {
+  padding: 10px 2%;
+}
+
+@media (max-width: 990px) {
+  .scrolled-past-header .header {
+    padding: 10px 2rem;
+  }
 }
