update header hover

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -819,6 +819,8 @@
   customElements.define('sticky-header', StickyHeader);
 {% endjavascript %}
 
+<script src="{{ 'megamenu-link.js' | asset_url }}" defer="defer"></script>
+
 <script type="application/ld+json">
   {
     "@context": "http://schema.org",
