add over layout when opening megamenu

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -249,6 +249,8 @@
 
     {% sections 'header-group' %}
 
+    <div class="over-layout"></div>
+
     <main id="MainContent" class="content-for-layout focus-none" role="main" tabindex="-1">
       {{ content_for_layout }}
     </main>
