--- a/assets/base.css
+++ b/assets/base.css
@@ -3080,3 +3080,14 @@ details-disclosure > details {
     padding: 10px 2rem;
   }
 }
+
+@media (min-width: 990px) {
+  .megamenu-open .over-layout {
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.1);
+    display: block;
+  }
+}
