--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -481,6 +481,110 @@
           "default": "center"
         }
       ]
+    },
+    {
+      "type": "contact_info",
+      "name": "Contact Info",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "text",
+          "id": "heading",
+          "label": "Heading",
+          "default": "¿NECESITAS AYUDA?"
+        },
+        {
+          "type": "header",
+          "content": "Phone"
+        },
+        {
+          "type": "html",
+          "id": "phone_icon",
+          "label": "Icon"
+        },
+        {
+          "type": "richtext",
+          "id": "phone_number",
+          "label": "Number",
+          "default": "<p><a href=\"tel:900 400 440\">900 400 440 ( horario L-V 8:00h - 14:00h )</a></p>"
+        },
+        {
+          "type": "header",
+          "content": "Email"
+        },
+        {
+          "type": "html",
+          "id": "email_icon",
+          "label": "Icon"
+        },
+        {
+          "type": "richtext",
+          "id": "email_address",
+          "label": "Email",
+          "default": "<p><a href=\"mailto:shoponline@unisa-europa.com\">shoponline@unisa-europa.com</a></p>"
+        },
+        {
+          "type": "header",
+          "content": "Social Links"
+        },
+        {
+          "type": "text",
+          "id": "social_heading",
+          "label": "Heading",
+          "default": "Stay social"
+        },
+        {
+          "type": "checkbox",
+          "id": "social_enable",
+          "label": "Enable",
+          "default": false
+        }
+      ]
+    },
+    {
+      "type": "review",
+      "name": "Review",
+      "limit": 1,
+      "settings": [
+        {
+          "type": "text",
+          "id": "heading",
+          "label": "Heading",
+          "default": "EKOMI"
+        },
+        {
+          "type": "image_picker",
+          "id": "star",
+          "label": "Star"
+        },
+        {
+          "type": "richtext",
+          "id": "score",
+          "label": "Score",
+          "default": "<p><strong>9.40</strong>/10.00</p>"
+        },
+        {
+          "type": "richtext",
+          "id": "description",
+          "label": "Description",
+          "default": "<p>Good communication en quick delivery</p>"
+        },
+        {
+          "type": "header",
+          "content": "Button"
+        },
+        {
+          "type": "text",
+          "id": "button_label",
+          "label": "Label",
+          "default": "Ver valoración"
+        },
+        {
+          "type": "url",
+          "id": "button_link",
+          "label": "Link"
+        }
+      ]
     }
   ],
   "settings": [
