mobile footer update

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -204,7 +204,7 @@
         min-height: 100%;
         margin: 0;
         font-size: 1.4rem;
-        letter-spacing: 0rem;
+        letter-spacing: 0.5px;
         line-height: 1.1;
         font-family: var(--font-body-family);
         font-style: var(--font-body-style);
