--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -7,7 +7,7 @@
 }
 
 .footer__content-top {
-  padding-bottom: 5rem;
+  padding-bottom: 2rem;
   display: block;
 }
 
@@ -40,11 +40,6 @@
   }
 }
 
-.footer__content-bottom {
-  border-top: solid 0.1rem rgba(var(--color-foreground), 0.08);
-  padding-top: 3rem;
-}
-
 .footer__content-bottom:only-child {
   border-top: 0;
 }
@@ -52,6 +47,7 @@
 .footer__content-bottom-wrapper {
   display: flex;
   width: 100%;
+  justify-content: flex-end;
 }
 
 @media screen and (max-width: 749px) {
@@ -146,9 +142,10 @@
 .footer-block__heading {
   margin-bottom: 1.2rem;
   margin-top: 0;
-  font-size: calc(var(--font-heading-scale) * 1.6rem);
-  font-weight: bold;
+  font-size: 14px;
+  font-weight: 600;
   text-align: left;
+  display: flex;
 }
 
 @media screen and (min-width: 990px) {
@@ -414,7 +411,6 @@ noscript .localization-selector.link {
 
 .footer__copyright {
   text-align: center;
-  margin-top: 1.5rem;
 }
 
 @media screen and (min-width: 750px) {
@@ -435,18 +431,18 @@ noscript .localization-selector.link {
 }
 
 .footer-block__details-content {
-  margin-bottom: 4rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
   flex-wrap: wrap;
+  padding-left: 20px;
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 990px) {
   .footer-block__details-content {
-    margin-bottom: 0;
     max-height: 27rem;
+    padding-left: 0;
   }
 
   .footer-block__details-content > p,
@@ -500,10 +496,6 @@ noscript .localization-selector.link {
 @media screen and (min-width: 750px) {
   .footer-block__details-content .list-menu__item--link {
     display: inline-block;
-  }
-
-  .footer-block__details-content > :first-child .list-menu__item--link {
-    padding-top: 0;
   }
 }
 
@@ -710,4 +702,132 @@ noscript .localization-selector.link {
 
 .footer-block__review-button .link {
   font-size: 12px;
+}
+
+.footer__content-top .grid {
+  gap: 0;
+}
+
+.footer-block {
+  width: 25% !important;
+}
+
+.footer-block.footer-block--menu {
+  width: 50%;
+}
+
+.footer-block__review-star {
+  width: 150px;
+}
+
+.footer-block__review-star img {
+  width: 100%;
+  height: auto;
+}
+
+.footer-block__heading + input {
+  display: none;
+}
+
+@media (max-width: 989px) {
+  .footer {
+    border-top: none;
+    padding: 0 !important;
+  }
+  .footer-block {
+    width: calc(100vw - 17px) !important;
+    max-width: 100vw !important;
+    margin: 0 0 0 -50px !important;
+    padding: 20px 50px !important;
+    border-bottom: 1px solid #E1E1E1;
+  }
+
+  .footer-block:first-of-type {
+    border-top: 1px solid #E1E1E1;
+  }
+
+  .footer-block__details-content .list-menu__item--link {
+    font-size: 14px;
+    padding: 8px 0;
+  }
+
+  .footer-block__contact-info, .footer-block__review {
+    padding: 0 20px;
+  }
+
+  .footer-block__contact-info-icon {
+    max-width: 20px;
+  }
+
+  .footer-block__social-heading, .footer__list-social {
+    display: none !important;
+  }
+
+  .footer-block__heading {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  .footer-block__heading-review .footer-block__heading {
+    margin-bottom: 5px;
+  }
+
+  .footer-block__review-star {
+    width: 80px;
+    margin-left: 5px;
+  }
+
+  .footer-block__review p {
+    margin: 10px 0;
+  }
+
+  .footer-block__heading .icon {
+    display: inline-flex;
+    margin-left: 3px;
+  }
+
+  .footer-block__heading-review .icon {
+    margin-top: -2px;
+  }
+
+  .footer-block__heading .icon-caret {
+    width: 10px;
+  }
+
+  .footer-block__details-content, .footer-block__contact-info, .footer-block__review {
+    max-height: 0;
+    overflow: hidden;
+    animation: 0.5s slideUp;
+  }
+
+  .footer-block__heading + input:checked + .footer-block__details-content, .footer-block__heading + input:checked + .footer-block__contact-info, .footer-block__heading + input:checked + .footer-block__review {
+    max-height: 100%;
+    animation: 0.5s slideDown;
+  }
+
+  .footer-block__details-content {
+    flex-wrap: nowrap;
+  }
+
+  .footer__content-bottom {
+    padding-bottom: 2rem;
+  }
+}
+
+@media (max-width: 749px) {
+  .footer-block {
+    margin: 0px 0px 0px -40px !important;
+    padding: 2rem !important;
+  }
+}
+
+@keyframes slideDown {
+  0% {max-height: 0;}
+  100% {max-height: 100%;}
+}
+
+@keyframes slideUp {
+  0% {max-height: 100%;}
+  100% {max-height: 0;}
 }
