--- a/snippets/icon-cart.liquid
+++ b/snippets/icon-cart.liquid
@@ -1,10 +1,1 @@
-<svg
-  class="icon icon-cart"
-  aria-hidden="true"
-  focusable="false"
-  xmlns="http://www.w3.org/2000/svg"
-  viewBox="0 0 40 40"
-  fill="none"
->
-  <path fill="currentColor" fill-rule="evenodd" d="M20.5 6.5a4.75 4.75 0 00-4.75 4.75v.56h-3.16l-.77 11.6a5 5 0 004.99 5.34h7.38a5 5 0 004.99-5.33l-.77-11.6h-3.16v-.57A4.75 4.75 0 0020.5 6.5zm3.75 5.31v-.56a3.75 3.75 0 10-7.5 0v.56h7.5zm-7.5 1h7.5v.56a3.75 3.75 0 11-7.5 0v-.56zm-1 0v.56a4.75 4.75 0 109.5 0v-.56h2.22l.71 10.67a4 4 0 01-3.99 4.27h-7.38a4 4 0 01-4-4.27l.72-10.67h2.22z"/>
-</svg>
+<svg class="icon icon-cart" fill="#000000" height="64px" width="64px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 512.00 512.00" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <path d="M401.067,145.067H358.4V102.4C358.4,45.935,312.465,0,256,0S153.6,45.935,153.6,102.4v42.667h-42.667 c-4.71,0-8.533,3.823-8.533,8.533v349.867c0,4.71,3.823,8.533,8.533,8.533h290.133c4.71,0,8.533-3.823,8.533-8.533V153.6 C409.6,148.89,405.777,145.067,401.067,145.067z M170.667,102.4c0-47.053,38.281-85.333,85.333-85.333 s85.333,38.281,85.333,85.333v42.667H170.667V102.4z M392.533,494.933H119.467v-332.8H153.6v25.6c0,4.71,3.823,8.533,8.533,8.533 c4.71,0,8.533-3.823,8.533-8.533v-25.6h170.667v25.6c0,4.71,3.823,8.533,8.533,8.533c4.71,0,8.533-3.823,8.533-8.533v-25.6h34.133 V494.933z"></path> </g> </g> </g></svg>
