--- a/assets/component-menu-drawer.css
+++ b/assets/component-menu-drawer.css
@@ -37,7 +37,7 @@ menu-drawer > details[open] > summary::before {
   top: 100%;
   width: 100%;
   padding: 0;
-  border-width: 0 var(--drawer-border-width) 0 0;
+  border-width: 0;
   background-color: rgb(var(--color-background));
   overflow-x: hidden;
   border-style: solid;
