--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -257,6 +257,9 @@
 
     {% sections 'footer-group' %}
 
+    <!-- Back to top button -->
+    <a id="back-to-top" href="javascript:;"><span class="back-to-top-arrow"></span></a>
+
     <ul hidden>
       <li id="a11y-refresh-page-message">{{ 'accessibility.refresh_page' | t }}</li>
       <li id="a11y-new-window-message">{{ 'accessibility.link_messages.new_window' | t }}</li>
