--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -238,7 +238,7 @@
     </script>
   </head>
 
-  <body class="gradient">
+  <body class="gradient template-{{ template.name }}">
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ "accessibility.skip_to_text" | t }}
     </a>
